--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -223,6 +223,13 @@
   transition: background 0.3s ease-in-out;
 }
 
+.menu-button {
+  cursor: pointer;
+  background: none;
+  text-decoration: none;
+  border: none;
+}
+
 .sidebar-button.active {
   background-color: #07aba0 !important;
   color: white;
