--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -4,15 +4,15 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
-  background-color: #f3f4f6;
+  /* background-color: #f3f4f6; */
 }
 
 /* Caixa de login */
 .login-box {
-  background: white;
+  /* background: white; */
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
   width: 400px;
   text-align: center;
 }
