--- a/src/styles/producoes.css
+++ b/src/styles/producoes.css
@@ -349,9 +349,25 @@
 
 .tabela-produtos th,
 .tabela-produtos td {
-  border: 1px solid #ccc;
   padding: 10px;
   text-align: left;
+}
+
+.acoes-container {
+  display: flex;
+  gap: 10px;
+}
+
+.acoes-btn {
+  background: none;
+  border: 1px solid #3b447b;
+  color: #3b447b;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.acoes-btn:hover {
+  background-color: #07aba0;
 }
 
 /* ✅ Estilização dos cabeçalhos (th) */
@@ -576,5 +592,64 @@ select[name="porcentagem"] {
   color: #999999;
   background: #d9d9d9;
   padding: 5px 10px;
+  border-radius: 5px;
+}
+
+/* Fundo escurecido quando a modal estiver aberta */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+/* Caixa da modal */
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+/* Botão de fechar */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+/* Opções da modal */
+.modal-option {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Alinha ícone e texto */
+  gap: 8px;
+  height: 35px; /* Definido pela imagem */
+  font-family: "Roboto Slab", serif; /* Fonte */
+  font-size: 20px; /* Tamanho da fonte */
+  font-weight: 500; /* Peso da fonte */
+  line-height: 21.1px; /* Espaçamento entre linhas */
+  color: #000000; /* Cor do texto */
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 10px auto; /* Centraliza os botões verticalmente */
+}
+
+.modal-option:hover {
+  background: #f0f0f0;
   border-radius: 5px;
 }
