--- a/src/styles/novaManutencao.css
+++ b/src/styles/novaManutencao.css
@@ -491,8 +491,22 @@ input[disabled] {
   margin-left: auto; /* Move os botões para a direita */
 }
 
-.voltar-button,
+.acoes-btn {
+  background: none;
+  border: 1px solid #3b447b;
+  color: #3b447b;
+  border-radius: 50px;
+  height: 35px;
+  cursor: pointer;
+}
+
 .acoes-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.voltar-button {
   background-color: #3b447b;
   color: #fff;
   border: none;
@@ -507,7 +521,7 @@ input[disabled] {
   transition: background 0.3sease-in-out;
 }
 
-.acoes-button {
+.voltar-button {
   background: none;
   border: 1px solid #3b447b;
   color: #3b447b;
@@ -515,10 +529,6 @@ input[disabled] {
 
 .voltar-button:hover {
   background-color: #2e365b;
-}
-
-.acoes-button:hover {
-  background-color: #060b21;
 }
 
 .salvar-button,
@@ -575,4 +585,62 @@ input[disabled] {
   .finalizar-button {
     width: 100%;
   }
+}
+/* Fundo escurecido quando a modal estiver aberta */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+/* Caixa da modal */
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+/* Botão de fechar */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+/* Opções da modal */
+.modal-option {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Alinha ícone e texto */
+  gap: 8px;
+  height: 35px; /* Definido pela imagem */
+  font-family: "Roboto Slab", serif; /* Fonte */
+  font-size: 20px; /* Tamanho da fonte */
+  font-weight: 500; /* Peso da fonte */
+  line-height: 21.1px; /* Espaçamento entre linhas */
+  color: #000000; /* Cor do texto */
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 10px auto; /* Centraliza os botões verticalmente */
+}
+
+.modal-option:hover {
+  background: #f0f0f0;
+  border-radius: 5px;
 }
