--- a/src/styles/producoes.css
+++ b/src/styles/producoes.css
@@ -1,5 +1,5 @@
 /* ✅ Container principal */
-.novo-produto-container {
+.novo-producoes-container {
   width: 100%;
   max-width: 1042px;
   margin: 40px auto;
@@ -8,7 +8,7 @@
 }
 
 /* ✅ Cabeçalho */
-.novo-produto-header {
+.novo-producoes-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,7 +16,7 @@
 }
 
 /* ✅ Título */
-.novo-produto-title {
+.novo-producoes-title {
   font-family: "Roboto Slab", serif;
   font-weight: 700;
   font-size: 32px;
@@ -335,22 +335,23 @@
 /*          */
 /*          */
 /* ✅ Estilização da tabela de produtos */
-.tabela-produtos-container {
+.tabela-producoes-container {
   border-radius: 8px;
   padding: 15px;
   background-color: #fff;
   gap: 15px;
 }
 
-.tabela-produtos {
+.tabela-producoes {
   width: 100%;
   border-collapse: collapse;
 }
 
-.tabela-produtos th,
-.tabela-produtos td {
+.tabela-producoes th,
+.tabela-producoes td {
   padding: 10px;
   text-align: left;
+  border: 1px solid black;
 }
 
 .acoes-container {
@@ -377,7 +378,7 @@
 }
 
 /* ✅ Estilização dos cabeçalhos (th) */
-.tabela-produtos th {
+.tabela-producoes th {
   background-color: #f9f9f9;
   font-family: "Roboto Slab", serif;
   font-weight: 400; /* ✅ Peso da fonte */
@@ -386,10 +387,11 @@
   color: #676363; /* ✅ Cor conforme a imagem */
   text-transform: none; /* ✅ Mantém o texto normal */
   padding: 8px 12px; /* ✅ Ajuste de espaçamento interno */
+  border: 1px solid black;
 }
 
 /* ✅ Inputs dentro da tabela */
-.tabela-produtos input {
+.tabela-producoes input {
   height: 35px;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, #999999, #cccccc, #999999) 1;
@@ -400,7 +402,7 @@
   outline: none;
 }
 
-.input-produto {
+.input-producoes {
   width: 500px;
 }
 
@@ -412,7 +414,6 @@
 .input-group.input-custo {
   display: flex;
   align-items: center;
-  width: 100px;
   padding: 5px;
   border-radius: 5px;
 }
@@ -477,7 +478,6 @@
 .totais-label {
   font-weight: bold;
   font-size: 16px;
-  color: #3b447b;
 }
 
 /* ✅ Botões abaixo da tabela */
@@ -535,12 +535,12 @@
 
 /* 📲 Responsividade */
 @media (max-width: 768px) {
-  .tabela-produtos th,
-  .tabela-produtos td {
+  .tabela-producoes th,
+  .tabela-producoes td {
     font-size: 14px;
   }
 
-  .input-produto {
+  .input-producoes {
     width: 100%;
   }
 
