--- a/src/styles/produto.css
+++ b/src/styles/produto.css
@@ -28,6 +28,7 @@
 /* ✅ Botões de ação (Incluir Produto + Ações) */
 .acoes-container {
   display: flex;
+  gap: 10px;
 }
 
 /* ✅ Botões "Incluir Produto" e "Ações" */
@@ -120,6 +121,7 @@
   gap: 10px;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .situacao-btn,
@@ -303,6 +305,7 @@
   margin-top: 20px;
   font-size: 16px;
   flex-wrap: wrap;
+  cursor: pointer;
 }
 
 /* 📲 Melhor responsividade */
