--- a/src/styles/novaManutencao.css
+++ b/src/styles/novaManutencao.css
@@ -88,19 +88,6 @@
   color: #333;
 }
 
-.input-componente {
-  width: 409px;
-  height: 30px;
-  border: 1px solid;
-  border-image: linear-gradient(to right, #999999, #cccccc, #999999) 1;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-  font-family: "Roboto Slab", serif;
-  color: #676363;
-  text-align: center;
-}
-
 .input-valor-manu {
   width: 183px;
   height: 30px;
@@ -263,9 +250,21 @@
 }
 
 /* ✅ Inputs & Selects */
-.form-group input,
+
 .form-group select {
-  width: 100%;
+  width: 190px;
+  height: 60px;
+  top: 235px;
+  left: 332px;
+  border: 1px solid;
+  border-image: linear-gradient(90deg, #999999, #cccccc, #999999);
+  border-image-slice: 1;
+}
+
+/* ✅ Inputs e selects */
+
+.form-group input {
+  width: 185px;
   height: 50px;
   border: 1px solid #999999;
   border-radius: 4px;
@@ -305,19 +304,6 @@ label {
   line-height: 23.74px;
   color: #676363;
   display: block;
-}
-
-/* ✅ Inputs e selects */
-.input,
-.select {
-  width: 100%;
-  height: 40px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-  font-family: "Roboto Slab", serif;
-  color: #676363;
 }
 
 .select {
@@ -508,6 +494,7 @@ input[disabled] {
   display: flex;
   align-items: center;
   margin-left: auto; /* Move os botões para a direita */
+  justify-content: space-between;
 }
 
 .acoes-btn {
@@ -517,6 +504,7 @@ input[disabled] {
   border-radius: 50px;
   height: 35px;
   cursor: pointer;
+  width: 90px;
 }
 
 .acoes-button {
