--- a/src/styles/detalhes.css
+++ b/src/styles/detalhes.css
@@ -9,6 +9,21 @@
   padding: 0 10px;
 }
 
+.vinte {
+  font-family: "Roboto Slab", serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0;
+  color: #676363;
+}
+
+.saldoHeader {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+}
+
 /* ✅ Estilização do cabeçalho */
 .detalhes-header {
   display: flex;
