--- a/src/styles/rightSidebar.css
+++ b/src/styles/rightSidebar.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   right: -1024px;
-  width: 710px;
+  width: 810px;
   height: 1024px;
   background: #ffffff;
   box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.2);
@@ -43,7 +43,7 @@
   justify-content: center;
   gap: 10px;
   cursor: pointer;
-  align-self: flex-end;
+  align-self: anchor-center;
   top: 33px;
   left: 1262px;
   transition: background 0.3s ease-in-out;
@@ -65,8 +65,8 @@
 /* ✅ Linhas do formulário */
 .form-row {
   display: flex;
-  gap: 50px;
-  margin-bottom: 15px;
+  gap: 30px;
+  margin-bottom: 25px;
 }
 
 .form-group {
@@ -76,17 +76,28 @@
 }
 
 .form-group label {
-  font-size: 14px;
-  font-weight: 600;
-  margin-bottom: 5px;
+  font-family: "Roboto Slab", serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: 0;
   color: #676363;
+  width: 98px;
+  height: 24px;
+  top: 220px;
+  left: 767px;
+}
+
+.rightHeader {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
 }
 
 /* ✅ Inputs e Selects */
 .form-group input,
 .form-group select,
 .form-group textarea {
-  width: 80%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -96,20 +107,59 @@
   font-size: 16px;
   color: #000;
   border-radius: 5px;
+}
+
+.input-deposito {
+  width: 180px;
+  height: 60px;
+}
+
+.input-linha {
+  width: 180px;
+  height: 60px;
+}
+
+.input-hora {
+  width: 180px;
+  height: 40px;
+}
+
+.input-date {
+  width: 180px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.input-tipo {
+  width: 180px;
+  height: 60px;
+}
+
+.input-lote {
+  width: 180px;
+  height: 60px;
+}
+
+.input-quantidade {
+  width: 150px;
+  height: 40px;
+}
+
+.form-group select {
   cursor: pointer;
 }
 
 .form-group textarea {
   height: 80px;
   resize: none;
-  width: 660px;
+  width: 95%;
 }
 
 /* ✅ Botões */
 .form-buttons {
   display: flex;
   justify-content: flex-start;
-  gap: 10px;
+  gap: 20px;
   margin-top: 15px;
 }
 
@@ -117,7 +167,7 @@
   background-color: #3b447b;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
@@ -132,7 +182,7 @@
   background: transparent;
   border: 1px solid #3b447b;
   color: #3b447b;
-  border-radius: 5px;
+  border-radius: 50px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
