--- a/src/styles/novoOperador.css
+++ b/src/styles/novoOperador.css
@@ -247,6 +247,11 @@ input[name="nome"] {
   width: 10%;
 }
 
+.buttons {
+  display: flex;
+  gap: 20px;
+}
+
 .hrButtons {
   width: 100%;
   height: 2px;
@@ -547,23 +552,26 @@ input[name="nome"] {
 
 .acoes {
   text-align: center;
-  display: grid;
+  display: flex;
   gap: 10px;
 }
+
 .botoes-acoes {
   display: flex;
   gap: 10px; /* Espaçamento entre os botões */
 }
 
 /* Estilização do botão de exclusão, igual ao botão de salvar */
-.delete-btn {
+.deletar-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #d9534f; /* Cor vermelha para deletar */
   color: white;
+  width: 100px;
+  height: 40px;
   padding: 6px 10px;
-  border-radius: 4px;
+  border-radius: 30px;
   cursor: pointer;
   border: none;
   font-size: 14px;
@@ -572,18 +580,20 @@ input[name="nome"] {
   gap: 10px;
 }
 
-.delete-btn:hover {
+.deletar-btn:hover {
   background-color: #c9302c; /* Tom mais escuro no hover */
 }
 
-.save-btn {
+.salvar-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #3b447b;
   color: white;
+  width: 100px;
+  height: 40px;
   padding: 6px 10px;
-  border-radius: 4px;
+  border-radius: 30px;
   cursor: pointer;
   border: none;
   font-size: 14px;
@@ -591,7 +601,7 @@ input[name="nome"] {
   transition: background 0.3s;
 }
 
-.save-btn:hover {
+.salvar-btn:hover {
   background-color: #2e376b;
 }
 
