--- a/src/styles/novoProduto.css
+++ b/src/styles/novoProduto.css
@@ -580,3 +580,14 @@ select[name="porcentagem"] {
   padding: 5px 10px;
   border-radius: 5px;
 }
+
+.input-error {
+  border: 1px solid red !important;
+  background-color: #ffe6e6;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 4px;
+}
